feat (buy_form/extras): venable next screen when mount

--- a/src/css/_buy_form.sass
+++ b/src/css/_buy_form.sass
@@ -186,6 +186,7 @@
             .extras-promo
                 .message
                     position: relative
+                    width: 100% 
 
                     p
                         font-size: 0.8rem
@@ -193,7 +194,7 @@
                         margin-left: 10px
                     
                     .spinner
-                        margin: 10px
+                        margin: 12px
 
         .buttons
             margin-top: 30px
