feat (buy_form/shipping): inputs and order now button

--- a/src/css/_buy_form.sass
+++ b/src/css/_buy_form.sass
@@ -196,6 +196,21 @@
                     .spinner
                         margin: 12px
 
+            .shipping
+
+                .input-wrapper
+                    width: 100%
+                    margin-top: 5px
+
+                    label
+                        font-size: 1.2rem
+                        margin: 10px
+                        display: block
+
+                    input
+                        padding: 10px 20px
+                        font-size: 0.8rem
+
         .buttons
             margin-top: 30px
             height: 60px
