feat (buy_form/preview): dynamic total

--- a/src/css/_buy_form.sass
+++ b/src/css/_buy_form.sass
@@ -103,6 +103,15 @@
                 font-size: 1.1rem
                 padding: 15px 30px
 
+            // Preview in left
+            .preview-wrapper
+                width: 40%
+                margin: 20px
+                display: flex
+                justify-content: center
+                align-items: center
+                flex-direction: column
+
             
             // Custom scrreens
             .login
@@ -231,8 +240,9 @@
                 > section
                     width: 100%
 
-                .buy-form-preview
+                .preview-wrapper
                     width: 80%
+                    flex-direction: column-reverse
 
                 .customize
                     .warning
