style (buy_form/promo): invalid text in red

--- a/src/css/_base.sass
+++ b/src/css/_base.sass
@@ -2,6 +2,7 @@ $color-a: #E7F6F2
 $color-b: #A5C9CA
 $color-c: #395B64
 $color-d: #2C3333
+$color-e: #f06c6c
 $transition-duration: 0.6s
 $regular-width: 1250px
 $regular-width-media-query: $regular-width + 50px
