--- a/src/css/_buy_form.sass
+++ b/src/css/_buy_form.sass
@@ -201,6 +201,9 @@
                         font-size: 0.8rem
                         color: $color-b
                         margin-left: 10px
+
+                        &.invalid
+                            color: $color-e
                     
                     .spinner
                         margin: 12px
