style (top_bar): cursor pointer

--- a/src/css/_top_bar.sass
+++ b/src/css/_top_bar.sass
@@ -13,6 +13,7 @@
         transition-duration: $transition-duration
         border: none
         color: $color-a
+        cursor: pointer
 
         &:hover
             background-color: rgba($color-b, 0.8)
