fix (buy_form/login/no_logged): validate email

--- a/src/css/_base.sass
+++ b/src/css/_base.sass
@@ -240,3 +240,5 @@ h1, h2, h3, h4, h5, h6, .title
     .swiper-button-disabled
         color: rgba($color-a, 0.1) !important
 
+p.invalid
+    color: $color-e
