feat (buy_form_extras_promo): buton for validate promo code

--- a/src/css/_buttons.sass
+++ b/src/css/_buttons.sass
@@ -86,3 +86,7 @@
 
             svg
                 fill: $color-d
+
+        &.no-margin-x
+            margin-right: 0
+            margin-left: 0
