feat (buy_form_shipping): add comments field

--- a/src/css/_input.sass
+++ b/src/css/_input.sass
@@ -1,6 +1,6 @@
-.input-wrapper
+.input-wrapper, .textarea-wrapper
 
-    input
+    input, textarea
         padding: 10px 15px
         border-radius: 5px
         width: 100%
@@ -15,3 +15,7 @@
 
             &::placeholder 
                 color: rgba($color-a, 0.5)
+
+    textarea
+        height: 150px
+        resize: none
