--- a/src/css/_buy_form.sass
+++ b/src/css/_buy_form.sass
@@ -123,7 +123,7 @@
                     align-items: center
                     flex-direction: column
 
-                    .input-wrapper
+                    .input-wrapper, .textarea-wrapper
                         margin-top: 30px
 
             .set
@@ -207,7 +207,7 @@
 
             .shipping
 
-                .input-wrapper
+                .input-wrapper, .textarea-wrapper
                     width: 100%
                     margin-top: 5px
 
