style (email-form): submit button padding

--- a/src/css/_email_form.sass
+++ b/src/css/_email_form.sass
@@ -33,6 +33,7 @@
 
             input[type="submit"]
                 border: none
+                padding: 10px
 
     @media screen and (min-width: 650px)
         form .inputs
