updated issues page

--- a/src/css/_header.sass
+++ b/src/css/_header.sass
@@ -45,7 +45,7 @@
 
                     &:hover a
                         color: $color-b
-                        font-size: 0.9rem
+                        // font-size: 0.9rem
 
                     a
                         transition-duration: $transition-duration
@@ -66,7 +66,7 @@
                 height: 80%
                 width: auto
 
-    @media screen and (max-width: 950px)
+    @media screen and (max-width: 1120px)
 
         .content
             .content-internal
