--- a/src/css/_loading.sass
+++ b/src/css/_loading.sass
@@ -6,7 +6,7 @@
     height: 100%
     z-index: 3
     background-color: $color-d
-    display: flex
+    display: none
     align-items: center
     justify-content: center
 
