--- a/src/css/_base.sass
+++ b/src/css/_base.sass
@@ -3,6 +3,9 @@ $color-b: #A5C9CA
 $color-c: #395B64
 $color-d: #2C3333
 $color-e: #f06c6c
+
+$color-page-link: #3e92a1
+
 $transition-duration: 0.6s
 $regular-width: 1250px
 $regular-width-media-query: $regular-width + 50px
@@ -120,8 +123,6 @@ h1, h2, h3, h4, h5, h6, .title
         opacity: 0.6
         filter: blur(2px)
 
-    
-
 .info-cards-wrapper
     display: grid
     grid-template-columns: repeat(3, 1fr)
@@ -143,14 +144,13 @@ h1, h2, h3, h4, h5, h6, .title
         display: flex
         align-items: center
         transition-duration: $transition-duration
-        
+
         &:hover
             opacity: 0.8
             transform: scale(1.05)
 
         &.link
             cursor: pointer
-
 
         &:hover .icon
             transform: scale(1.15)
@@ -216,7 +216,6 @@ h1, h2, h3, h4, h5, h6, .title
 
     @media screen and (max-width: 1200px)
         grid-gap: 10px
-
 
     @media screen and (max-width: 1000px)
         grid-template-columns: repeat(2, 1fr)
