--- a/src/css/_header.sass
+++ b/src/css/_header.sass
@@ -6,6 +6,16 @@
     width: 100%
     z-index: 2
 
+    .page-link
+        background-color: $color-page-link
+        color: $color-a
+        font-weight: bold
+        border-radius: 5px
+        border: 1px solid $color-page-link
+
+        &:hover
+            border: 1px solid $color-a
+
     .bg
         position: absolute
         left: 0
