--- a/src/css/_header.sass
+++ b/src/css/_header.sass
@@ -6,6 +6,17 @@
     width: 100%
     z-index: 2
 
+    .page-link
+        a
+            background-color: $color-page-link
+            color: $color-a
+            font-weight: bold
+            border-radius: 5px
+            border: 1px solid $color-page-link
+            &:hover
+                border: 1px solid $color-a
+
+
     .bg
         position: absolute
         left: 0
@@ -67,6 +78,7 @@
                 width: auto
 
     @media screen and (max-width: 1120px)
+        
 
         .content
             .content-internal
@@ -97,8 +109,11 @@
 
                             a
                                 font-size: 1.5rem
-                                padding: 20px 0
+                                padding: 10px 0
                                 display: inline-block
+                        .page-link
+                            a
+                                padding: 10px
 
         &.clossed .content .content-internal
             nav
