--- a/src/css/_input_checkbox.sass
+++ b/src/css/_input_checkbox.sass
@@ -11,3 +11,10 @@
 
     p
         margin: 5px 0 
+
+    a
+        color: $color-b
+        transition-duration: $transition-duration
+
+        &:hover
+            color: rgba($color-b, 0.5)
