feat (footer): add legals

--- a/src/css/_footer.sass
+++ b/src/css/_footer.sass
@@ -19,6 +19,7 @@
                 display: flex
                 align-items: center
                 justify-content: space-between
+                max-width: 600px
 
                 a
                     padding: 0px 20px
@@ -69,4 +70,6 @@
 
                     img
                         margin: 10px
+    
+    @media screen and (max-width: 400px)
 
